trunk/Archive2/07/a9458bda5a3e3a/output
main.cpp: In function 'int main()':
main.cpp:17:2: error: 'cout' was not declared in this scope
  cout<<"File\'s"<<"\n"<<"computer";
  ^
main.cpp:17:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
