trunk/Archive2/07/a9458bda5a3e3a/main.cpp
#include <iostream>
#include <string>
#include <vector>

template<typename T>
std::ostream& operator<<(std::ostream& os, const std::vector<T>& vec)
{
    for (auto& el : vec)
    {
        os << el << ' ';
    }
    return os;
}

int main()
{
 cout<<"File\'s"<<"\n"<<"computer";
    cout<<"a"<<"\n\v"<<"\v\t"<<"d";
}
